session-12-ingress-configmaps-secrets/Vimal-24BCS10273/manifests/03-backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: campus-backend
  labels:
    app: campus-backend
spec:
  replicas: 2
  selector:
    matchLabels:
      app: campus-backend
  template:
    metadata:
      labels:
        app: campus-backend
    spec:
      containers:
        - name: api
          image: python:3.11-alpine
          ports:
            - containerPort: 5000
          command:
            - sh
            - -c
            - |
              [...]
          resources:
            requests:
              cpu: 25m
              memory: 32Mi
---
apiVersion: v1
kind: Service
metadata:
  name: campus-backend-service
spec:
  type: ClusterIP
  selector:
    app: campus-backend
  ports:
    - port: 80
      targetPort: 5000
